--- a/charts/spark-operator-chart/Chart.yaml
+++ b/charts/spark-operator-chart/Chart.yaml
@@ -5,7 +5,7 @@ version: 1.1.27
 appVersion: v1beta2-1.3.8-3.1.1
 keywords:
   - spark
-home: https://source.developers.google.com/p/kyvos-impetus/r/mygkespark-repo
+home: https://github.com/mkhare55/spark-ops
 maintainers:
-  - name: yuchaoran2011
-    email: yuchaoran2011@gmail.com
+  - name: xyx
+    email: xyz@gmail.com
